# foxwar_bridge

./: .gitignore  README.md  build.gradle.kts  package-lock.json  package.json
.github/workflows/: release.yml
frontend/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  protocol.rs  settings.rs  sse_server.rs  tray.rs  updater.rs  watcher.rs
